force-app/main/default/objects/Company_Level_Documents__c/Company_Level_Documents__c.object-meta.xml
<CustomObject>
    <label>Company Level Documents</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Level Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Level Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>