force-app/main/default/objects/Company_Level_Documents__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Company Level Documents</relationshipLabel>
    <relationshipName>Company_Level_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>