force-app/main/default/objects/Company_Level_Documents__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to company&apos;s opportunity based on company ID and application id</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Company Level Documents</relationshipLabel>
    <relationshipName>Company_Level_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>